correction mobile paysage

--- a/style.css
+++ b/style.css
@@ -580,6 +580,7 @@ footer li:first-child
         padding:10px;
         padding-right: 40px;
         margin-right: 0;
+        padding-bottom: 30px;
         gap:8%;
     }
 
@@ -588,6 +589,7 @@ footer li:first-child
         flex-direction: row;
         flex-wrap: wrap;
         height: auto;
+        padding-bottom: 30px;
     }
     
     article div
@@ -597,6 +599,11 @@ footer li:first-child
         margin-top: 50px;
         margin-right: 0;
         padding-bottom: 50px;
+    }
+
+    #afficher_plus
+    {
+        padding-top: 50px;
     }
 
     /*aside*/
@@ -610,14 +617,13 @@ footer li:first-child
         flex-wrap: wrap;
         margin-top: 40px;
         padding-right: 40px;
-        gap:7%;
     }
 
     aside div, aside h2
     {
         width:350px;
         align-content: space-between;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
     }
 
     aside h2
